<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="enter_amount_hint">Enter Amount</string>
    <string name="tip_percentage">15%</string>
    <string name="tip_value">Tip</string>
    <string name="share_label">Share</string>
    <string name="share_hint">Enter Share</string>
    <string name="total_label">Total</string>
    <string name="shared_amount_label">Shared Amount</string>
</resources>